--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@craco/craco": "^6.2.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
+    "@react-google-maps/api": "^2.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "emailjs-com": "^3.2.0",
     "jwt-decode": "^3.1.2",
     "nanocolors": "^0.2.12",
     "react": "^17.0.2",
